# GNU-poke

./: README.md
poke/: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  bootstrap.conf  cfg.mk  configure.ac  run.in
poke/common/: pk-utils.c  pk-utils.h
poke/doc/: .gitignore  Makefile.am  gen-pvm-insns.sh  poke.texi
poke/etc/: git.orderfile  pk-mi-json-schema.json  poke-default.css  poke-gdb.scm  poke-map-mode.el  poke-mode.el  poke-ras-mode.el  poke.g4
poke/etc/git-hooks/: pre-push
poke/gui/: Makefile.am  pk-gui.tcl  pk-main.tcl  pk-mi-msg.tcl  pk-mi.tcl  poke-gui.c
poke/libpoke/: Makefile.am  ios-dev-file.c  ios-dev-mem.c  ios-dev-nbd.c  ios-dev.h  ios.c  ios.h  libpoke.c  libpoke.h  pk-val.c  pkl-anal.c  pkl-anal.h  pkl-asm.c  pkl-asm.h  pkl-asm.pks  pkl-ast.c  pkl-ast.h  pkl-attrs.def  pkl-diag.c  pkl-diag.h  pkl-env.c  pkl-env.h  pkl-fold.c  pkl-fold.h  pkl-gen.c  pkl-gen.h  pkl-gen.pks  pkl-insn.def  pkl-lex.l  pkl-ops.def  pkl-parser.c  pkl-parser.h  pkl-pass.c  pkl-pass.h  pkl-promo.c  pkl-promo.h  pkl-rt.pk  pkl-tab.y  pkl-trans.c  pkl-trans.h  (+17 more)
poke/man/: Makefile.am
poke/maps/: Makefile.am  elf.map  mp3.map
poke/pickles/: Makefile.am  bmp.pk  bpf.pk  btf.pk  color.pk  ctf.pk  elf.pk  id3v1.pk  leb128.pk  rgb24.pk
poke/pickles/future/: bson.pk  deflate.pk  dwarf.pk  elf-future.pk  flv.pk  gzip.pk  id3v2.pk  jpeg.pk  mp3.pk  pdp10.pk  swf.pk  tar.pk
poke/po/: ChangeLog  POTFILES.in
poke/poke/: Makefile.am  pk-cmd-def.c  pk-cmd-editor.c  pk-cmd-help.c  pk-cmd-info.c  pk-cmd-ios.c  pk-cmd-map.c  pk-cmd-misc.c  pk-cmd-set.c  pk-cmd-vm.c  pk-cmd.c  pk-cmd.h  pk-cmd.pk  pk-copy.pk  pk-dump.pk  pk-hserver.c  pk-hserver.h  pk-ios.c  pk-ios.h  pk-map-lex.l  pk-map-parser.h  pk-map-tab.y  pk-map.c  pk-map.h  pk-mi-json.c  pk-mi-json.h  pk-mi-msg.c  pk-mi-msg.h  pk-mi.c  pk-mi.h  pk-repl.c  pk-repl.h  pk-save.pk  pk-term.c  pk-term.h  poke.c  poke.h  poke.pk
poke/src/: Makefile.am
poke/testsuite/: Makefile.am
poke/testsuite/lib/: poke-dg.exp  poke.exp
poke/testsuite/poke.cmd/: cmd.exp  copy-1.pk  copy-2.pk  copy-3.pk  copy-4.pk  copy-5.pk  dump-1.pk  dump-5.pk  dump-6.pk  dump-7.pk  dump-8.pk  file-mode.pk  file-relative.pk  ios-1.pk  maps-1.pk  maps-2.pk  maps-3.pk  maps-4.pk  maps-5.pk  maps-6.pk  maps-7.pk  maps-8.pk  maps-9.pk  maps-alien-1.pk  nbd-1.pk  save-1.pk  set-oacutoff-1.pk  set-oacutoff-2.pk  set-obase-1.pk  set-obase-2.pk  set-obase-3.pk  set-obase-4.pk  set-obase-5.pk  set-odepth-1.pk  set-odepth-2.pk  set-oindent.pk  set-omaps-1.pk  set-omode.pk
poke/testsuite/poke.color/: color-1.pk  color-2.pk  color-3.pk  color-4.pk  color.exp
poke/testsuite/poke.id3v1/: id3v1-1.pk  id3v1-2.pk  id3v1-3.pk  id3v1-4.pk  id3v1-5.pk  id3v1-6.pk  id3v1-7.pk  id3v1-8.pk  id3v1-9.pk  id3v1.exp
poke/testsuite/poke.map/: ass-map-1.pk  ass-map-2.pk  ass-map-3.pk  ass-map-4.pk  ass-map-5.pk  map-opcond-write-1.pk  map-optcond-1.pk  map-optcond-10.pk  map-optcond-11.pk  map-optcond-2.pk  map-optcond-3.pk  map-optcond-4.pk  map-optcond-5.pk  map-optcond-6.pk  map-optcond-7.pk  map-optcond-8.pk  map-optcond-9.pk  map.exp  mapped-attr.pk  maps-arrays-1.pk  maps-arrays-10.pk  maps-arrays-11.pk  maps-arrays-16.pk  maps-arrays-17.pk  maps-arrays-18.pk  maps-arrays-19.pk  maps-arrays-20.pk  maps-arrays-3.pk  maps-arrays-6.pk  maps-arrays-7.pk  maps-arrays-8.pk  maps-arrays-9.pk  maps-int-01.pk  maps-int-02.pk  maps-int-03.pk  maps-int-04.pk  maps-int-05.pk  maps-int-06.pk  maps-int-07.pk  maps-int-08.pk  (+172 more)
poke/testsuite/poke.pkl/: add-arrays-1.pk  add-arrays-2.pk  add-arrays-3.pk  add-arrays-diag-1.pk  add-arrays-diag-2.pk  add-arrays-diag-3.pk  add-offsets-10.pk  add-offsets-9.pk  and-1.pk  and-12.pk  and-13.pk  and-14.pk  and-15.pk  and-7.pk  and-diag-1.pk  array-siz-diag-1.pk  array-type-1.pk  arrays-10.pk  arrays-11.pk  arrays-12.pk  arrays-13.pk  arrays-3.pk  arrays-4.pk  arrays-6.pk  arrays-8.pk  arrays-9.pk  arrays-diag-1.pk  arrays-diag-2.pk  arrays-diag-3.pk  arrays-index-1.pk  arrays-index-2.pk  arrays-index-3.pk  arrays-index-diag-1.pk  arrays-index-diag-2.pk  arrays-index-diag-3.pk  ass-1.pk  ass-2.pk  ass-3.pk  ass-4.pk  ass-5.pk  (+600 more)
poke/testsuite/poke.repl/: repl.exp
poke/testsuite/poke.rgb24/: rgb24-1.pk  rgb24.exp
poke/testsuite/poke.std/: atoi-1.pk  atoi-10.pk  atoi-11.pk  atoi-12.pk  atoi-13.pk  atoi-14.pk  atoi-2.pk  atoi-3.pk  atoi-4.pk  atoi-5.pk  atoi-6.pk  atoi-7.pk  atoi-8.pk  atoi-9.pk  catos-3.pk  crc32.pk  ltrim-1.pk  ltrim-2.pk  ltrim-3.pk  rtrim-1.pk  rtrim-2.pk  rtrim-3.pk  std.exp  stoca-1.pk  stoca-2.pk  stoca-3.pk  stoca-4.pk  strchr-1.pk  strchr-2.pk  strchr-3.pk  time32.pk
